# pta-parser

./: Cargo.toml  LICENSE  README.md  journal.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
pta-ledger/: Cargo.toml
pta-ledger/src/: ledger_builder.rs  lib.rs
pta-parser/: Cargo.toml
pta-parser/src/: ledger_parser.rs  lib.rs
pta-parser/src/grammars/: base.pest  beancount.pest  generic.pest  ledger.pest
pta-parser/src/ledger_parser/: mod.rs
pta-parser/src/parser_tests/: basics.rs  mod.rs  transaction.rs
pta-parser/src/parsers/: mod.rs
pta-types/: Cargo.toml
pta-types/src/: lib.rs  parsed_ledger.rs  raw_transaction.rs
testdata/: basic-ledger
