# Copyright (C) 2023, AltaModa Technologies, LLC. All rights reserved.
#
# This project is licensed under the terms of the MIT license (cf. LICENSE file in root).

[package]
name = "cli"
version.workspace = true
authors.workspace = true
respository.workspace = true
edition.workspace = true


[dependencies]
log = "0.4.20"
pest = "2.7.3"
pretty_env_logger = "0.5.0"
pta-ledger = { path = "../pta-ledger" }
pta-parser = { path = "../pta-parser" }
pta-types = { path = "../pta-types" }
