[package]
name = "pta-ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false

[dependencies]
log = { version = "0.4.20", features = ["kv_unstable", "kv_unstable_serde"] }
pest = "2.7.3"
pest_derive = "2.7.3"
pretty_env_logger = "0.5.0"
pta-parser = { path = "../pta-parser" }
pta-types ={ path = "../pta-types" }

[dev-dependencies]
rstest = "0.18.2"
