# Copyright (C) 2023, AltaModa Technologies, LLC. All rights reserved.
#
# This project is licensed under the terms of the MIT license (cf. LICENSE file in root).

[package]
name = "pta-ledger"
version.workspace = true
authors.workspace = true
# respository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false

[dependencies]
log = { version = "0.4.20", features = ["kv_unstable", "kv_unstable_serde"] }
pest = "2.7.3"
pest_derive = "2.7.3"
pta-parser = { path = "../pta-parser" }
pta-types ={ path = "../pta-types" }

[dev-dependencies]
rstest = "0.19.0"
